todo init
